docs: controllers document
